[project]
name = "hacs-glowmarkt"
version = "0.1.0"
description = "Home Assistant integration for Glowmarkt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["mypy>=1.15.0", "swagger-client"]

[tool.uv.sources]
swagger-client = { git = "https://github.com/c10l/python-glowmarkt.git" }
